After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 788577 - Global -GtkComboBox-appears-as-list breaks opening menu-mode CBs by keyboard
Global -GtkComboBox-appears-as-list breaks opening menu-mode CBs by keyboard
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkComboBox
3.22.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2017-10-06 00:32 UTC by Daniel Boles
Modified: 2017-10-06 00:41 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
ComboBox: Don’t let modes disconnect each other (2.26 KB, patch)
2017-10-06 00:40 UTC, Daniel Boles
committed Details | Review

Description Daniel Boles 2017-10-06 00:32:59 UTC
Setting -appears-as-list, but then having a ComboBox that is forced into grid (menu) mode because its :wrap-width > 0, breaks opening that CB with keyboard 

Not setting the global -appears-as-list makes the button presses work as normal.
Comment 1 Daniel Boles 2017-10-06 00:40:46 UTC
Created attachment 361009 [details] [review]
ComboBox: Don’t let modes disconnect each other

…from priv->button. My refactor to g_signal_disconnect_by_data()
included this widget, when I shouldn’t have as both modes use it.
This e.g. broke opening a CB by keyboard that was currently in menu
mode, if it had been in list mode initially (e.g. due to the theme).

Fix by moving to disconnect_by_func() and only removing in each mode’s
destroy() method the signals that it set on the button in its setup().
Comment 2 Daniel Boles 2017-10-06 00:41:22 UTC
Attachment 361009 [details] pushed as 7fc09f1 - ComboBox: Don’t let modes disconnect each other